# DSCRAP-latest

descrap/: README.md  build_files.sh  db.sqlite3  manage.py  package-lock.json  pyproject.toml  requirements.txt  vercel.json
descrap/descrap/: asgi.py  settings.py  urls.py  wsgi.py
descrap/main/: admin.py  apps.py  forms.py  models.py  obj.py  urls.py  views.py
descrap/main/migrations/: 0001_initial.py  0002_alter_document_image.py  0003_myuser_username.py
descrap/main/templates/: base.html  bill.html  index.html  messages.html  scrapcalc.html  table.html
