[tool.poetry]
name = "descrap"
version = "0.1.0"
description = ""
authors = ["Dron Kishor <dronkishor2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
django-widget-tweaks = "^1.5.0"
opencv-python-headless = "^4.9.0.80"
ipython = "^8.20.0"
pandas = "^2.2.0"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
